--- a/index.html
+++ b/index.html
@@ -2,60 +2,81 @@
 <html>
 <head>
     <title>Password Strength Checker</title>
-
-    <!-- Font Awesome for Eye Icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
     <style>
         body {
+            margin: 0;
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 100px;
+            background: linear-gradient(135deg, #6a5acd, #483d8b);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
-        .password-container {
-            position: relative;
-            display: inline-block;
+        .container {
+            background: rgba(255, 255, 255, 0.1);
+            padding: 40px;
+            border-radius: 20px;
+            width: 400px;
+            text-align: center;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            color: white;
+        }
+
+        h2 {
+            margin-bottom: 30px;
         }
 
         input {
-            padding: 10px;
-            width: 250px;
+            width: 100%;
+            padding: 12px;
+            border-radius: 10px;
+            border: none;
             font-size: 16px;
-        }
-
-        .eye-icon {
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            cursor: pointer;
-            color: gray;
+            margin-bottom: 20px;
         }
 
         button {
             padding: 10px 20px;
-            font-size: 16px;
-            margin-top: 15px;
+            border: none;
+            border-radius: 10px;
+            background: white;
+            color: #6a5acd;
+            font-weight: bold;
             cursor: pointer;
+            margin-bottom: 20px;
         }
 
-        #result {
-            margin-top: 20px;
+        .progress-bar {
+            height: 10px;
+            background: rgba(255,255,255,0.3);
+            border-radius: 10px;
+            overflow: hidden;
+            margin-bottom: 15px;
+        }
+
+        .progress {
+            height: 100%;
+            width: 0%;
+            background: red;
+            border-radius: 10px;
+            transition: width 0.3s ease;
+        }
+
+        #strengthText {
             font-weight: bold;
-            font-size: 18px;
+            margin-bottom: 10px;
         }
 
         #suggestions {
-            margin-top: 15px;
             text-align: left;
-            display: inline-block;
+            margin-top: 10px;
         }
 
         #suggestions ul {
-            color: red;
             padding-left: 20px;
-            list-style-type: disc; /* Force bullet points */
+            list-style-type: disc;
         }
 
         #suggestions li {
@@ -65,27 +86,88 @@
 </head>
 <body>
 
-    <h2>Password Strength Checker</h2>
+<div class="container">
+    <h2>🔐 Password Strength Checker</h2>
 
-    <div class="password-container">
-        <input type="password" id="password" placeholder="Enter password">
-        <i class="fa-solid fa-eye eye-icon" onclick="togglePassword()" id="eye"></i>
-    </div>
+    <input type="password" id="password" placeholder="Enter your password">
 
-    <br>
     <button onclick="checkPassword()">Check Strength</button>
 
-    <div id="result"></div>
+    <div class="progress-bar">
+        <div class="progress" id="progressBar"></div>
+    </div>
+
+    <div id="strengthText"></div>
     <div id="suggestions"></div>
+</div>
 
-    <script>
-        function togglePassword() {
-            var passwordField = document.getElementById("password");
-            var eyeIcon = document.getElementById("eye");
+<script>
+function checkPassword() {
+    var password = document.getElementById("password").value;
+    var score = 0;
+    var suggestions = [];
 
-            if (passwordField.type === "password") {
-                passwordField.type = "text";
-                eyeIcon.classList.remove("fa-eye");
-                eyeIcon.classList.add("fa-eye-slash");
-            } else {
-                passwor
+    if (password.length >= 8) {
+        score++;
+    } else {
+        suggestions.push("Use at least 8 characters.");
+    }
+
+    if (/[A-Z]/.test(password)) {
+        score++;
+    } else {
+        suggestions.push("Add uppercase letters.");
+    }
+
+    if (/[0-9]/.test(password)) {
+        score++;
+    } else {
+        suggestions.push("Add numbers.");
+    }
+
+    if (/[!@#$%^&*]/.test(password)) {
+        score++;
+    } else {
+        suggestions.push("Add special characters (!@#$%^&*).");
+    }
+
+    var strength = "";
+    var color = "";
+    var width = (score / 4) * 100;
+
+    if (score <= 1) {
+        strength = "Weak";
+        color = "red";
+    } else if (score <= 3) {
+        strength = "Medium";
+        color = "orange";
+    } else {
+        strength = "Strong";
+        color = "lightgreen";
+    }
+
+    document.getElementById("progressBar").style.width = width + "%";
+    document.getElementById("progressBar").style.background = color;
+
+    document.getElementById("strengthText").innerHTML =
+        "Strength: " + strength + " (" + score + "/4)";
+
+    // 🔥 Suggestions as bullet list
+    var suggestionHTML = "";
+
+    if (suggestions.length > 0) {
+        suggestionHTML = "<ul>";
+        for (var i = 0; i < suggestions.length; i++) {
+            suggestionHTML += "<li>" + suggestions[i] + "</li>";
+        }
+        suggestionHTML += "</ul>";
+    } else {
+        suggestionHTML = "<p style='color:lightgreen;'>Great! Your password is strong.</p>";
+    }
+
+    document.getElementById("suggestions").innerHTML = suggestionHTML;
+}
+</script>
+
+</body>
+</html>
