--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ function checkPassword() {
     document.getElementById("strengthText").innerHTML =
         "Strength: " + strength + " (" + score + "/4)";
 
-    // 🔥 Suggestions as bullet list
+    // 🔥 Bullet list suggestions
     var suggestionHTML = "";
 
     if (suggestions.length > 0) {
